<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#980a0a09">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abtapp"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog"
        android:id="@+id/textView5"
        android:textAlignment="center"
        android:textColor="#0cd735"
        android:textSize="18sp"
        android:autoLink="web"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        tools:linksClickable="false"
        android:linksClickable="true"
        tools:textColorLink="@color/white"
        android:textColorLink="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:id="@+id/textView6"
        android:textSize="22sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textAlignment="center"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coder"
        android:id="@+id/textView10"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="?android:attr/colorPrimary"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif" />

    <Button android:id="@+id/ok"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true">
        <requestFocus/>
    </Button>

</RelativeLayout>